[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "event-systems"
version = "0.1.5"
authors = [
  { email="sir_even@icloud.com"},
]
description = "A collection of thread-safe event systems which components can use to subscribe and post to other components."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sirEven/event-systems.git"

[mypy]
ignore_missing_imports = true

[tool.setuptools.package-data]
"event_systems" = ["py.typed"]

[tool.coverage.run]
omit = [
    # omit anything in a .local directory anywhere
    "test_*",
    "main.py",
    "__init__.py",
    "conftest.py",
]

[tool.coverage.report]
exclude_also = [
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
exclude = "^tests/"